Adding dependencies for JNA and modifying the 'Add' button to now check and display names and locations of running user applications