@@ -1,12 +1,20 @@
 package com.example.applicationlauncherandwindoworganizer;
 
+import com.sun.jna.Native;
+import com.sun.jna.Pointer;
+import com.sun.jna.platform.win32.User32;
+import com.sun.jna.platform.win32.WinDef;
+import com.sun.jna.platform.win32.WinUser;
 import javafx.scene.control.Button;
 import javafx.scene.layout.GridPane;
-
 import java.util.ArrayList;
 import java.util.List;
 
 public class ButtonHandler {
+    private static final int GWL_STYLE = -16;
+    private static final int WS_VISIBLE = 0x10000000;
+    private static final int WS_POPUP = 0x80000000;
+
     private List<Button> buttonList;
     private GridPane gridPane;
     private int gridPaneId;
@@ -22,6 +30,27 @@ public class ButtonHandler {
         button.setOnAction(event -> handleButtonAction(button));
         buttonList.add(button);
         updateGridPane();
+
+        User32.INSTANCE.EnumWindows(new WinUser.WNDENUMPROC() {
+            @Override
+            public boolean callback(WinDef.HWND hWnd, Pointer arg1) {
+                if (isWindowAppropriate(hWnd)) {
+                    char[] windowText = new char[512];
+                    User32.INSTANCE.GetWindowText(hWnd, windowText, 512);
+                    String wText = Native.toString(windowText);
+
+                    if (!wText.isEmpty()) {
+                        WinDef.RECT rect = new WinDef.RECT();
+                        User32.INSTANCE.GetWindowRect(hWnd, rect);
+                        if (rect.left < rect.right && rect.top < rect.bottom) {
+                            System.out.println("Window Title: " + wText);
+                            System.out.println("Position: (" + rect.left + ", " + rect.top + ") - (" + rect.right + ", " + rect.bottom + ")");
+                        }
+                    }
+                }
+                return true;
+            }
+        }, null);
     }
 
     private void handleButtonAction(Button button) {
@@ -33,6 +62,12 @@ public class ButtonHandler {
 
         }
         System.out.println("Clicked: " + button.getText());
+    }
+
+    private static boolean isWindowAppropriate(WinDef.HWND hWnd) {
+        int style = User32.INSTANCE.GetWindowLong(hWnd, GWL_STYLE);
+
+        return ((style & WS_VISIBLE) != 0) && ((style & WS_POPUP) == 0);
     }
 
     private void updateGridPane() {
@@ -69,12 +104,12 @@ public class ButtonHandler {
     }
 
     public void giveDeleteClassToButtons() {
-        boolean hasDeleteClass = buttonList.get(0).getStyleClass().contains("delete");
-        for(int i = 0; i < buttonList.size(); ++i) {
-            if(hasDeleteClass)
-                buttonList.get(i).getStyleClass().remove("delete");
+        boolean hasDeleteClass = buttonList.getFirst().getStyleClass().contains("delete");
+        for (Button button : buttonList) {
+            if (hasDeleteClass)
+                button.getStyleClass().remove("delete");
             else
-                buttonList.get(i).getStyleClass().add("delete");
+                button.getStyleClass().add("delete");
         }
         updateGridPane();
     }
